--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p>Na stranicama ovog web sjedišta ćete naći osnovne informacije o nastanku i funkciji računalnih mreža koje su doprinijele komunikaciji i globalizaciji.</p>
                 <p>Ovu stranicu je izradila studentica <a class="mail" href="mailto://rebeka.filipovi@student.uniri.hr">Rebeka Filipović</a>.</p>
                 <p>&nbsp;</p>
-                <figure><img class="okvr" src="Slike/ozinf.jpg" hight="400" alt="odjel za informatiku" /></figure>
+                <figure><img class="okvr" src="slike/ozinf.jpg" hight="400" alt="odjel za informatiku" /></figure>
             </article>
         </section>
         <footer>
